[metadata]
name = ollama-chat
version = 0.9.20
url = https://github.com/craigahobbs/ollama-chat
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = An Ollama chat web application
long_description = file:README.md
long_description_content_type = text/markdown
keywords = ollama, chatbot, conversational AI, artificial intelligence, AI
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages = ollama_chat, ollama_chat.static
package_dir =
    = src
install_requires =
    chisel >= 1.2.7
    ollama >= 0.1.9
    waitress >= 3.0.0

[options.entry_points]
console_scripts =
    ollama-chat = ollama_chat.main:main

[options.package_data]
ollama_chat =
    static/index.html
    static/ollamaChat.bare
    static/ollamaChat.smd
