[metadata]
name = ollama-chat
version = 0.9.69
url = https://github.com/craigahobbs/ollama-chat
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = An Ollama chat web application
long_description = file:README.md
long_description_content_type = text/markdown
keywords = ollama, chatbot, conversational AI, artificial intelligence, AI
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages = ollama_chat, ollama_chat.static
package_dir =
    = src
install_requires =
    chisel >= 1.4.6
    urllib3 >= 2.5.0
    waitress >= 3.0.0

[options.entry_points]
console_scripts =
    ollama-chat = ollama_chat.main:main

[options.package_data]
ollama_chat =
    static/*.bare
    static/*.html
    static/*.smd
